FEATURE: Home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="x">X</string>
     <string name="close_terms">x</string>
     <string name="large_text">test </string>
+    <string name="text_label_switch_no">NO</string>
+    <string name="text_label_switch_yes">YES</string>
 </resources>
